Link to devpg.com

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 headline: |
   # Welcome to the *techfightclub*!
 story: |
-  Hi, I'm André. I've started my tech career more than 15 years ago. In my role as a technical leader I've been always facing challenging situations. My main strategy to handle these is to constantly learn.
+  Hi, [I'm André](https://devpg.com). I've started my tech career more than 15 years ago. In my role as a technical leader I've been always facing challenging situations. My main strategy to handle these is to constantly learn.
   
   Over the years I built up a collection of articles, slides, talks, etc ... and I will continue do so. I'm happy to share it with other technical leaders who seek for experience sharing to derive learnings and take the right decisions.
 content: |
