Add special styling to headline

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 headline: |
-  # Welcome to the *techfightclub*!
+  # Welcome to the <span class="headline">techfightclub</span>
 story: |
   Hi, [I'm André](https://devpg.com). I've started my tech career more than 15 years ago. In my role as a technical leader I've been always facing challenging situations. My main strategy to handle these is to constantly learn.
   
