--- a/_data/content.yml
+++ b/_data/content.yml
@@ -16,4 +16,13 @@
   href: https://boringtechnology.club/
   tags: [Technology, Strategy]
 
+- title: Career framework inspiration from the world's best companies
+  type: article
+  href: https://progression.fyi/
+  tags: [Career management, Organisation]
+
+- title: Dev Team Todo Matrix by Etienne de Bruin
+  type: talk
+  href: https://www.youtube.com/watch?v=VObfMoYE1MA
+  tags: [Strategy]
   
