Fix broken quotes

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -26,7 +26,7 @@
   href: https://www.youtube.com/watch?v=VObfMoYE1MA
   tags: [Strategy]
   
-- title: "Product is Hard" by Inspired Author Marty Cagan
+- title: '"Product is Hard" by Inspired Author Marty Cagan'
   type: talk
   href: https://www.youtube.com/watch?v=gCYFmrvPI8Q
   tags: [Product management, Product development]
