--- a/_data/content.yml
+++ b/_data/content.yml
@@ -30,3 +30,10 @@
   type: talk
   href: https://www.youtube.com/watch?v=gCYFmrvPI8Q
   tags: [Product management, Product development]
+
+- title: DORA Metrics explained
+  type: talk
+  href: https://www.youtube.com/watch?v=YOvEIFLWz3I
+  tags: [KPI]
+
+  
