Add new content
on decision making

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -36,4 +36,9 @@
   href: https://www.youtube.com/watch?v=YOvEIFLWz3I
   tags: [KPI]
 
+- title: "One-way and Two-way Door Decisions"
+  type: article
+  href: https://shit.management/one-way-and-two-way-door-decisions/
+  tags: [Decision making]
+
   
