[Content] Ten laws of software development

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -51,3 +51,7 @@
   href: https://www.svpg.com/product-vs-feature-teams/
   tags: [Product development, Organisation]
 
+- title: Ten laws of software development
+  type: article
+  href: https://www.parkersoftware.com/blog/ten-laws-of-software-development/
+  tags: [Fundamentals]
