[Content] Shape up

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -60,3 +60,8 @@
   type: article
   href: https://www.thekua.com/atwork/2016/11/the-well-rounded-architect/
   tags: [Architecture, Organisation]
+
+- title: Shape Up
+  type: talk
+  href: https://www.youtube.com/watch?v=h_8M23wVjXk
+  tags: [Product development]
