--- a/_data/content.yml
+++ b/_data/content.yml
@@ -71,4 +71,12 @@
   href: https://www.infoq.com/presentations/Breaking-the-Monolith/
   tags: [Architecture]
 
-  
+- title: The SPACE of Developer Productivity
+  type: article
+  href: https://queue.acm.org/detail.cfm?id=3454124
+  tags: [KPI, Organisation]
+
+- title: "What is the SCR Framework? Your In-depth Guide to Situation-Complication-Resolution"
+  type: article
+  href: https://www.strategypunk.com/what-is-the-scr-framework-your-in-depth-guide-to-situation-complication-resolution/
+  tags: [Soft skills, Decision making] 
