--- a/_data/content.yml
+++ b/_data/content.yml
@@ -80,3 +80,8 @@
   type: article
   href: https://www.strategypunk.com/what-is-the-scr-framework-your-in-depth-guide-to-situation-complication-resolution/
   tags: [Soft skills, Decision making] 
+
+- title: "10 metrics more valuable than velocity"
+  type: presentation
+  href: https://www.virtuallyagile.co.uk/post/10-metrics-more-valuable-than-velocity
+  tags: [KPI]
